1.fix the form deposite. 2.fix the overflow issues. 3.finished the login page.

--- a/public_html/css/panels/black/style-0.css
+++ b/public_html/css/panels/black/style-0.css
@@ -6873,11 +6873,6 @@ body .content-wrapper .tabs-wrapper .tab-wrapper {
     margin: 1.4em 0em 3.5em 0em;
   }
 }
-@media (max-width: 768px) {
-  body .content-wrapper .tabs-wrapper .tab-wrapper {
-    width: 95%;
-  }
-}
 body .content-wrapper .tabs-wrapper .tab-wrapper:hover [class^="tab-shadow"] {
   opacity: 1;
 }
