--- a/resources/assets/less/panels/black/aussie-black.less
+++ b/resources/assets/less/panels/black/aussie-black.less
@@ -392,9 +392,6 @@ body {
         @media (max-width: 996px) {
           .margin(1.4em, 0em, 3.5em, 0em);
         }
-        @media (max-width:768px) {
-          width: 95%;
-        }
 
         &:hover [class^="tab-shadow"] {
           opacity: 1;
